--- a/src/component/siderbar/side.css
+++ b/src/component/siderbar/side.css
@@ -2,6 +2,7 @@ nav {
     position: fixed;
     right: 1.1rem;
     top: 1.5rem;
+    transition: 3s ease-out;
 }
 
 li {
@@ -18,4 +19,10 @@ li {
     text-align: right;
     text-decoration: none;
     transition: .2s ease-in-out;
+}
+
+.nav a:hover {
+    opacity: 3px;
+    color: #fff;
+    font-size: 1.8em;
 }
