--- a/src/component/contact/contact.module.css
+++ b/src/component/contact/contact.module.css
@@ -1,4 +1,15 @@
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: green;
+    height: 100vh
+}
+
+.left {}
+
 form {
+    width: 150%;
     border-radius: 5px;
     padding: 20px;
     margin: 8px 5px;
