--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    color: rgb(238 238 238);
+    color: #fff;
     font-family: Alumni Sans;
-    background-color: #000000;
+    background: #000;
 }
