--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -5,12 +5,11 @@
     position: relative;
     padding: 0.5rem 0rem;
     color: black;
-    box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
 }
 
 .brand-name {
     text-decoration: none;
-    color: black;
+    color: #fff;
     font-size: 1.3rem;
     margin-left: 1rem;
 }
@@ -33,7 +32,7 @@
     text-decoration: none;
     display: block;
     width: 100%;
-    color: green;
+    color: #fff;
     font-size: 1.3rem;
 }
 
@@ -79,6 +78,7 @@
         height: calc(100vh - 77px);
         background-color: white;
         border-top: 1px solid black;
+        z-index: 2;
     }
     .navigationMenu li {
         text-align: center;
