--- a/src/component/skill/skill.module.css
+++ b/src/component/skill/skill.module.css
@@ -1,11 +1,11 @@
 .container {
-    
+    width: 100%;
+    height: 100%;
 }
 
 .flex {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    gap: 20px;
 }
 
 .boxes1 {
@@ -14,7 +14,6 @@
     cursor: pointer;
     transition: .8s ease-in-out;
     line-height: 2.5em;
-    background-color:green;
 }
 
 .icons {
@@ -27,9 +26,7 @@
     border: 1px solid rgb(255 255 255);
     padding: 2em;
     line-height: 2.5em;
-    background-color:red;
     opacity: 0.6;
-    transition: 1s;
     cursor: pointer;
     transition: .8s ease-in-out;
 }
@@ -37,6 +34,7 @@
 .H1 {
     font-size: 3em;
     font-weight: bold;
+    padding-bottom: 50px;
 }
 
 .hi {
@@ -50,25 +48,23 @@
         margin-left: 0px;
     }
     .flex {
-        
         flex-direction: column;
         align-items: space-between;
         gap: 17px;
     }
     .boxes2 {
-      
         font-size: 1em;
-        padding: 0.3px;
         line-height: 1.5em;
     }
     .boxes1 {
-        
         font-size: 1em;
-        padding: 0.1px;
         line-height: 1.5em;
     }
     .hi {
         text-align: "center";
         font-size: 1px;
+    }
+    .H1 {
+        padding-bottom: 10px;
     }
 }
