--- a/src/index.css
+++ b/src/index.css
@@ -14,13 +14,15 @@ body {
     display: grid;
     grid-template-areas: 'header' 'main' 'footer';
     grid-template-columns: 1fr;
-    grid-template-rows: 3rem 1fr 2.5rem;
+    grid-template-rows: 5rem 1fr 5rem;
     height: 100vh;
 }
 
 header {
     grid-area: header;
-    background-color: #203040;
+    background-color: #192a69;
+    display: flex;
+    align-items: center;
 }
 
 main {
@@ -30,7 +32,7 @@ main {
 
 footer {
     grid-area: footer;
-    background-color: #203040;
+    background-color: #192a69;
     color: #ffffff;
 }
 
