--- a/src/component/about/about.module.css
+++ b/src/component/about/about.module.css
@@ -1,25 +1,28 @@
- 
- .about h1 {
-     font-size: 4em
- }
- 
- .about h2 {
-     font-size: 1.3em;
-     font-weight: none;
- }
- 
- .about .bigH2 {
-     font-size: 2.8em;
-     line-height: 1.8em;
- }
- 
- .button {
-     background-color: rgb(255 255 255 / 23%);
-     border-radius: 5px;
-     color: rgb(255 255 255);
-     margin: 20px .2em 0 0;
-     padding: 10px;
-     height: 100px;
-     text-decoration: none;
-     transition: .2s ease-in;
- }
+.about {
+    margin-bottom: 40px;
+}
+
+.about h1 {
+    font-size: 4em
+}
+
+.about h2 {
+    font-size: 1.3em;
+    font-weight: none;
+}
+
+.about .bigH2 {
+    font-size: 2.8em;
+    line-height: 1.8em;
+}
+
+.button {
+    background-color: rgb(255 255 255 / 23%);
+    border-radius: 5px;
+    color: rgb(255 255 255);
+    margin: 20px .2em 10px 0;
+    padding: 10px;
+    height: 100px;
+    text-decoration: none;
+    transition: .2s ease-in;
+}
