--- a/src/component/contact/contact.css
+++ b/src/component/contact/contact.css
@@ -78,7 +78,7 @@ input[type="submit"] {
     text-transform: uppercase;
     border-width: 1px;
     border-style: solid;
-    border-color: rgb(255, 255, 255);
+    border-color: #192a69;
     border-image: initial;
     padding: 24px;
     text-decoration: none;
@@ -90,6 +90,8 @@ input[type="submit"]:hover {
     text-decoration: underline;
     background: inherit;
     color: white;
+    border-color: white;
+    background-color: #192a69;
 }
 
 @media screen and (max-width: 768px) {
