--- a/src/component/home/home.module.css
+++ b/src/component/home/home.module.css
@@ -17,9 +17,8 @@
 }
 
 h3 a {
-    background-color: rgb(255 255 255 / 27%);
     border-radius: 5px;
-    color: rgb(255 255 255);
+    color: #ff7a59;
     padding: 3px;
     margin: 1px;
     text-decoration: none;
@@ -27,13 +26,15 @@ h3 a {
 }
 
 h3 a:hover {
-    font-size: 1.1em;
+    border: #192a69 #ff7a59 solid 1px;
+    color: #fff;
+    background: #192a69
 }
 
 .button button {
     text-decoration: none;
-    background-color: white;
-    color: #000000;
+    background-color: #192a69;
+    color: #fff;
     padding: 24px 25px;
     text-transform: uppercase;
     letter-spacing: 4px;
@@ -42,11 +43,12 @@ h3 a:hover {
     font-weight: bolder;
     border: 1px solid white;
     cursor: pointer;
+    opacity: 0.5;
     transition: ease-in-out 0.3s;
 }
 
 .button button:hover {
-    font-size: 1.1em;
+    transform: skew(-10deg);
 }
 
 @media screen and (max-width: 780px) {
