--- a/src/component/about/about.module.css
+++ b/src/component/about/about.module.css
@@ -17,12 +17,19 @@
 }
 
 .button {
-    background-color: rgb(255 255 255 / 23%);
+    background-color: #fff;
     border-radius: 5px;
-    color: rgb(255 255 255);
+    border-color: #192a69;
+    color: #192a69;
     margin: 20px .2em 10px 0;
     padding: 10px;
     height: 100px;
     text-decoration: none;
     transition: .2s ease-in;
+}
+
+.button:hover {
+    background-color: #192a69;
+    color: rgb(255 255 255);
+    text-decoration: underline;
 }
