--- a/src/component/home/home.module.css
+++ b/src/component/home/home.module.css
@@ -3,17 +3,26 @@
     line-height: 3em;
 }
 
-.home .span {
+.home span {
     color: rgb(255 255 255);
     font-family: Sofia;
     font-size: 2.8em;
-    font-family: Sofia;
+    padding: 100px 0;
 }
 
 .home1 h3 {
     color: rgb(112 128 144 / 78%);
-    font-size: 1.7em;
-    padding: 5px;
+    font-size: 1.3em;
+    padding: 2px;
+    line-height: 1.3em;
+}
+
+.home1 .span {
+    margin: 501px 0;
+}
+
+.p {
+    margin: 10px !important;
 }
 
 h3 a {
@@ -54,12 +63,12 @@ h3 a:hover {
 @media screen and (max-width: 780px) {
     .home1 {
         margin: 0;
-        margin: 60px 45px;
+        margin: 60px 20px;
         line-height: 2.5em;
     }
     .home1 h3 {
         color: rgb(112 128 144 / 78%);
-        font-size: 1.4em;
+        font-size: 1.2em;
         padding: 2px;
     }
     .home .span {
