--- a/src/component/skill/skill.module.css
+++ b/src/component/skill/skill.module.css
@@ -5,15 +5,22 @@
 
 .flex {
     display: flex;
-    gap: 20px;
+    gap: 5em;
+    justify-content: center;
 }
 
-.boxes1 {
+.flex :hover {
+    background-color: white;
+    color: #000;
+}
+
+.box {
     border: 1px solid rgb(255 255 255);
     padding: 2em;
-    cursor: pointer;
     transition: .8s ease-in-out;
     line-height: 2.5em;
+    width: 420px;
+    height: 340px;
 }
 
 .icons {
@@ -22,13 +29,12 @@
     float: center;
 }
 
-.boxes2 {
-    border: 1px solid rgb(255 255 255);
-    padding: 2em;
-    line-height: 2.5em;
-    opacity: 0.6;
-    cursor: pointer;
-    transition: .8s ease-in-out;
+.box h2 {
+    font-size: 1.2em;
+}
+
+.box h3 {
+    font-size: 1.4em;
 }
 
 .H1 {
@@ -39,26 +45,21 @@
 
 .hi {
     text-align: "center";
-    font-size: 50px;
+    font-size: 3em;
 }
 
 @media screen and (max-width:600px) {
     .container {
         width: 100%;
-        margin-left: 0px;
     }
     .flex {
         flex-direction: column;
         align-items: space-between;
         gap: 17px;
     }
-    .boxes2 {
-        font-size: 1em;
-        line-height: 1.5em;
-    }
-    .boxes1 {
-        font-size: 1em;
-        line-height: 1.5em;
+    .box {
+        width: 100%;
+        height: 100%;
     }
     .hi {
         text-align: "center";
