--- a/src/component/home/home.module.css
+++ b/src/component/home/home.module.css
@@ -42,18 +42,18 @@ h3 a:hover {
 
 .button button {
     text-decoration: none;
-    background-color: #192a69;
-    color: #fff;
+    background-color: #fff;
+    color: #000;
     padding: 24px 25px;
     text-transform: uppercase;
     letter-spacing: 4px;
     font-size: 0.9em;
     font-family: 'Alumni Sans';
     font-weight: bolder;
-    border: 1px solid white;
+    border: 1px solid #192a69;
     cursor: pointer;
-    opacity: 0.5;
     transition: ease-in-out 0.3s;
+    margin-top: 5px;
 }
 
 .button button:hover {
