--- a/src/component/resume.css
+++ b/src/component/resume.css
@@ -16,7 +16,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 5px;
 }
 
 .Example__container__load {
@@ -32,6 +31,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
 }
 
 .Example__container__document .react-pdf__Page {
@@ -43,6 +43,7 @@
 .Example__container__document .react-pdf__Page canvas {
     max-width: 100%;
     height: auto !important;
+    overflow: hidden;
 }
 
 .Example__container__document .react-pdf__message {
