--- a/src/component/project/project.css
+++ b/src/component/project/project.css
@@ -16,15 +16,15 @@
     padding: 0.1em;
     transition: .8s ease-in-out;
     line-height: 1.5em;
-    width: 360px;
-    height: 380px;
+    width: 320px;
+    height: 340px !important;
     border-radius: 10px
 }
 
 .image {
     display: block;
-    width: 100%;
-    height: 100%;
+    width: 310px;
+    height: 330px !important;
     border-radius: 3px
 }
 
@@ -46,8 +46,6 @@
     background-color: #192a69;
     border-radius: 10px;
 }
-
-.oio {}
 
 .text {
     color: #fff;
