--- a/src/route/about/about.module.css
+++ b/src/route/about/about.module.css
@@ -32,3 +32,9 @@
     color: rgb(255 255 255);
     text-decoration: underline;
 }
+
+@media screen and (max-width: 780px) {
+    .about h2 {
+        font-size: 1.1em;
+    }
+}
