--- a/src/route/skill/skill.module.css
+++ b/src/route/skill/skill.module.css
@@ -7,11 +7,13 @@
     display: flex;
     gap: 5em;
     justify-content: center;
+    transition: 1s linear;
 }
 
 .flex :hover {
     background-color: white;
     color: #000;
+    transition: 1s linear;
 }
 
 .box {
