--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -2,7 +2,9 @@
     width: 100%;
     display: flex;
     align-items: center;
-    position: relative;
+    justify-content: space-between;
+    position: sticky;
+    top: 0;
     padding: 0.5rem 0rem;
     color: black;
     transition: .8s ease-in-out;
