--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@tailwind bases;
+@tailwind componentss;
+@tailwind utilitiess;
 * {
     padding: 0;
     margin: 0;
@@ -23,6 +26,9 @@ header {
     background-color: #192a69;
     display: flex;
     align-items: center;
+    position: sticky;
+    top: 0;
+    z-index:99;
 }
 
 main {
